# nyc_taxi

./: README.md  docker-compose.yml  pyproject.toml
dags/: nyc_taxi.py
dbt/: .user.yml  Dockerfile  dbt_project.yml  profiles.yml
dbt/models/: example.sql
logs/scheduler/: latest
